--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,4 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  margin: 0;
-  min-width: 360px;
-  min-height: 600px;
-}
+/* TODO: Delete all accept fonts */
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
@@ -100,3 +90,10 @@ hr {
   text-align: center;
 }
 
+/* FONTS */
+
+@font-face {
+  font-family: "Inter";
+  src: url("./style/fonts/Inter.var.woff2") format("woff2");
+  font-weight: 100 1000;
+}
