Refactor styling / layout for extension And check that extension is actually compiling properly and working in chrome as intended.

--- a/src/index.css
+++ b/src/index.css
@@ -1,99 +1,7 @@
-/* TODO: Delete all accept fonts */
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
-
-a {
-  color: #46AD8D;
-}
-
-hr {
-  margin: 32px;
-}
-
-.actions {
-  text-align: center;
-}
-
-.content {
-  padding: 16px;
-}
-
-.buttonLarge {
-  width: 60%;
-}
-
-.buttonTop {
-  transform: scale(1.5);
-  position: absolute;
-}
-
-.buttonTopR {
-  top: 16px;
-  right: 16px;
-}
-
-.buttonTopL {
-  top: 16px;
-  left: 16px;
-}
-
-.card {
-  padding: 16px;
-}
-
-.cardContent {
-  font-size: 4.8vw;
-}
-
-.cardRight {
-  float: right;
-  width: 50%;
-  text-align: right;
-}
-
-.drawer {
-  padding: 16px;
-}
-
-.field {
-  width: 99%;
-}
-
-.form {
-  margin: 'auto';
-}
-
-.header {
-  height: 54px;
-  width: 100%;
-  text-align: center;
-}
-
-.logo {
-  padding: 16px;
-  width: 33%;
-  max-width: 140px;
-}
-
-.section {
-  padding-bottom: 6px;
-}
-
-.txTitle {
-  font-size: 24px;
-}
-
-.welcome {
-  text-align: center;
-}
-
 /* FONTS */
 
 @font-face {
-  font-family: "Inter";
-  src: url("./style/fonts/Inter.var.woff2") format("woff2");
+  font-family: 'Inter';
+  src: url('./style/fonts/Inter.var.woff2') format('woff2');
   font-weight: 100 1000;
 }
