Improve loading speed, cleanup manifests and stylesheets, fix sizing issues

--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,63 @@
+/* GLOBAL SETTINGS */
+
+body {
+  font-size: inherit;
+  margin: 0;
+  font-family: 'Inter', sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  overflow-y: auto;
+  height: 100%;
+  width: 100%;
+  font-weight: 500;
+  font-size: 13px;
+}
+
+#root {
+  height: 100%;
+  display: flex;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+h1 {
+  font-size: 2.3em;
+  margin-bottom: 40px;
+  margin-top: 30px;
+}
+
+h2 {
+  font-weight: 600;
+}
+
+h3 {
+  font-weight: 600;
+  font-size: 1em;
+}
+
+input,
+button {
+  outline: none;
+  border: none;
+  background: transparent;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+#app-header {
+  -webkit-app-region: drag;
+  z-index: 10000;
+}
+
 /* FONTS */
 
 @font-face {
   font-family: 'Inter';
   src: url('./style/fonts/Inter.var.woff2') format('woff2');
   font-weight: 100 1000;
-}
-
-/* Webkit drag handle */
-
-#app-header {
-  -webkit-app-region: drag;
 }
